# pet-shop-app

./: .env  .gitignore  main.py  pyproject.toml  readme.md  schemas.py
config/: __init__.py  config.py
db/: __init__.py  engine.py
db/methods/: __init__.py  auth_methods.py  find_pets_helper.py  private_pets_methods.py  public_pets_methods.py
db/models/: __init__.py  base.py  pet.py  user.py
internal/: __init__.py  admin.py  auth.py  dependencies.py
routers/: __init__.py  pets.py
